[tool.poetry]
name = "py_dummy_uds_server"
version = "0.0.1"
description = "this is python project template description"
authors = ["chaitu-ycr <chaitu.ycr@gmail.com>"]
license = "LICENSE"
readme = "README.md"
homepage = "https://github.com/chaitu-ycr/py_dummy_uds_server.git"
repository = "https://github.com/chaitu-ycr/py_dummy_uds_server.git"
documentation = "https://chaitu-ycr.github.io/py_dummy_uds_server/"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-html = "^4.1.1"
mkdocstrings-python = "^1.12.2"
mkdocs-include-markdown-plugin = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
